# mpc-cbf

./: .clang-format  .dockerignore  .gitignore  .gitmodules  README.md
lib/cbf/: CMakeLists.txt
lib/cbf/examples/: CBFControlSlack_example.cpp  CBFControlStaticTarget_example.cpp  CBFControl_example.cpp
lib/cbf/include/cbf/controller/: CBFControl.h
lib/cbf/include/cbf/detail/: cbf.h
lib/cbf/include/cbf/optimization/: CBFQPGenerator.h  CBFQPOperations.h
lib/cbf/src/: cbf.cpp
lib/cbf/src/controller/: CBFControl.cpp
lib/cbf/src/detail/: cbf.cpp
lib/cbf/src/optimization/: CBFQPGenerator.cpp  CBFQPOperations.cpp
lib/cbf/tests/: cbf_test.cpp  test_class.cpp
lib/math/: CMakeLists.txt
lib/math/include/math/: Combinatorics.h  Helpers.h
lib/math/include/math/collision_shapes/: AlignedBoxCollisionShape.h
lib/math/src/: Helpers.cpp
lib/math/src/collision_shapes/: AlignedBoxCollisionShape.cpp  CollisionShape.cpp
lib/mpc/: CMakeLists.txt
lib/mpc/examples/: BezierMPCXYYaw_example.cpp
lib/mpc/include/mpc/controller/: BezierMPC.h
lib/mpc/include/mpc/optimization/: PiecewiseBezierMPCQPGenerator.h  PiecewiseBezierMPCQPOperations.h
lib/mpc/src/controller/: BezierMPC.cpp
lib/mpc/src/optimization/: PiecewiseBezierMPCQPGenerator.cpp  PiecewiseBezierMPCQPOperations.cpp
lib/mpc_cbf/: CMakeLists.txt
lib/mpc_cbf/examples/: BezierIMPCCBFPFXYYaw_example.cpp  BezierIMPCCBFXYYaw_example.cpp  BezierMPCCBFXYYaw_example.cpp
lib/mpc_cbf/include/mpc_cbf/controller/: BezierIMPCCBF.h  BezierMPCCBF.h
lib/mpc_cbf/include/mpc_cbf/optimization/: PiecewiseBezierMPCCBFQPGenerator.h  PiecewiseBezierMPCCBFQPOperations.h
lib/mpc_cbf/src/controller/: BezierIMPCCBF.cpp  BezierMPCCBF.cpp
lib/mpc_cbf/src/optimization/: PiecewiseBezierMPCCBFQPGenerator.cpp  PiecewiseBezierMPCCBFQPOperations.cpp
lib/particle_filter/: CMakeLists.txt
lib/particle_filter/include/particle_filter/detail/: particle_filter.h
lib/particle_filter/src/detail/: particle_filter.cpp
lib/particle_filter/tests/: pf_test.cpp
lib/qpcpp/: CMakeLists.txt
lib/qpcpp/include/qpcpp/: Problem.h  QPOperations.h
lib/qpcpp/include/qpcpp/solvers/: CPLEX.h
lib/qpcpp/src/: Problem.cpp  QPOperations.cpp
lib/qpcpp/src/solvers/: Solver.cpp
lib/splines/: CMakeLists.txt
lib/splines/include/splines/curves/: Helpers.h
lib/splines/include/splines/optimization/: BezierQPOperations.h  QPOperations.h  SingleParameterCurveQPOperations.h
lib/splines/src/curves/: Bezier.cpp  Helpers.cpp
lib/splines/src/optimization/: BezierQPOperations.cpp  QPOperations.cpp
workspace/lib/cbf/: CMakeLists.txt
workspace/lib/cbf/examples/: CBFControl_example.cpp  CBFControl_example_copy.cpp
workspace/lib/cbf/examples/connectivity/: CBFFormationControl3D_example.cpp  CBFFormationControl_example.cpp
workspace/lib/cbf/examples/deprecated/: CBFControlSlack_example.cpp  CBFControlStaticTarget_example.cpp
workspace/lib/cbf/examples/fov/: CBFControl_example.cpp
workspace/lib/cbf/include/cbf/: Helpers.hpp
workspace/lib/cbf/src/: pentagon.txt
workspace/lib/cbf/src/connectivity/: square.txt  test.cpp  triangle.txt
workspace/lib/cbf/src/controller/: CBFControl.cpp  ConnectivityControl.cpp  FovControl.cpp
workspace/lib/cbf/src/detail/: ConnectivityCBF.cpp  FovCBF.cpp  cbf.cpp  connectivity_cbf.cpp
workspace/lib/cbf/src/optimization/: CBFQPGenerator.cpp  CBFQPGeneratorBase.cpp  CBFQPOperations.cpp  ConnectivityQPGenerator.cpp  FovQPGenerator.cpp
workspace/lib/cbf/tests/: CMakeLists.txt  LaplacianTest.cpp  TestInitConnectivity.cpp  TestInitSafetyCBF.cpp  test_class.cpp
workspace/lib/common/: CMakeLists.txt
workspace/lib/common/include/common/: logging.hpp  parsing.hpp
workspace/lib/math/: CMakeLists.txt
workspace/lib/math/include/math/: Combinatorics.h  Controls.h  Geometry.h  Helpers.h  Random.h  Types.h
workspace/lib/math/src/: Combinatorics.cpp  Controls.cpp  Geometry.cpp  Helpers.cpp  Random.cpp
workspace/lib/math/src/collision_shapes/: AlignedBoxCollisionShape.cpp  CollisionShape.cpp
workspace/lib/math/tests/: AlignedBoxCollisionShapeTest.cpp  CMakeLists.txt  CollisionShapeTest.cpp  CombinatoricsTest.cpp
workspace/lib/model/: CMakeLists.txt
workspace/lib/model/examples/: DoubleIntegratorXYYaw_example.cpp
workspace/lib/model/include/model/: DoubleIntegrator.h  DoubleIntegratorXYYaw.h
workspace/lib/model/src/: DoubleIntegrator.cpp  DoubleIntegratorXYYaw.cpp
workspace/lib/model/tests/: CMakeLists.txt  DoubleIntegratorTest.cpp  DoubleIntegratorXYYawTest.cpp
workspace/lib/mpc_cbf/: CMakeLists.txt
workspace/lib/mpc_cbf/examples/: BezierIMPCCBFPFXYYaw_example.cpp  BezierIMPCCBFXYYaw_example.cpp
workspace/lib/mpc_cbf/examples/connectivity/: MPCCBFFormationControl_example.cpp
workspace/lib/mpc_cbf/examples/fov/: BezierIMPCCBFPFXYYaw_example.cpp  BezierMPCCBFXYYaw_example.cpp
workspace/lib/mpc_cbf/include/mpc_cbf/: Helpers.hpp
workspace/lib/mpc_cbf/src/controller/: BezierIMPCCBF.cpp  BezierMPCCBF.cpp  ConnectivityIMPCCBF.cpp  FovBezierIMPCCBF.cpp
workspace/lib/mpc_cbf/src/detail/: ConnectivityCBF.cpp
workspace/lib/mpc_cbf/src/optimization/: ConnectivityMPCCBFQPGenerator.cpp  ConnectivityMPCCBFQPOperations.cpp  FovMPCCBFQPGenerator.cpp  FovMPCCBFQPOperations.cpp  MPCCBFQPGeneratorBase.cpp  MPCCBFQPOperationsBase.cpp
workspace/lib/particle_filter/: CMakeLists.txt
workspace/lib/particle_filter/include/particle_filter/: pf_applications.h
workspace/lib/particle_filter/src/: pf_applications.cpp
workspace/lib/particle_filter/tests/: show_samples.py
workspace/lib/qpcpp/tests/: CMakeLists.txt  CPLEXTest.cpp  ProblemTest.cpp  QPOperationsTest.cpp
workspace/lib/separating_hyperplanes/: CMakeLists.txt
workspace/lib/separating_hyperplanes/src/: SVM.cpp  Voronoi.cpp
workspace/lib/separating_hyperplanes/tests/: CMakeLists.txt  SVMTest.cpp  VoronoiTest.cpp
workspace/src/fovmpc_controller/: CMakeLists.txt  package.xml
workspace/src/fovmpc_controller/launch/: control.launch  fovmpc_rviz.rviz  ids.launch
workspace/src/fovmpc_controller/src/: control_node.cpp  goal_node.cpp
(+183 files in other folders)
